--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
 
 	<properties>
 		<httpobjects-version>0.11.0</httpobjects-version>
+		<commonmark-version>0.8.0</commonmark-version>
 	</properties>
 
 	<build>
@@ -108,7 +109,13 @@
 		<dependency>
 			<groupId>com.atlassian.commonmark</groupId>
 			<artifactId>commonmark</artifactId>
-			<version>0.8.0</version>
+			<version>${commonmark-version}</version>
 		</dependency>
+		<dependency>
+			<groupId>com.atlassian.commonmark</groupId>
+			<artifactId>commonmark-ext-heading-anchor</artifactId>
+			<version>${commonmark-version}</version>
+		</dependency>
+		
 	</dependencies>
 </project>
